# claudex

./: .gitignore  README.md  RELEASING.md  package.json
docs/assets/: _hero-mockup.html  _red-poster.html
frontend/: package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BackupsPanel.tsx  Toolbar.tsx  UpdateBanner.tsx
frontend/src/lib/: api.ts  profileColor.ts
promo/: package.json
promo/scripts/: capture.mjs  render_poster.mjs  verify_all_row.mjs  verify_backups.mjs  verify_session_grid.mjs  verify_share.mjs  verify_titlebar_clicks.mjs  verify_update_banner.mjs
src/: cli.js  convert.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: convert.rs  lib.rs
src/commands/: convert.js
test/: convert.test.js
