[package]
name = "claude_multiprofile_app"
version = "0.1.9"
edition = "2021"

[lib]
name = "claude_multiprofile_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
toml_edit = "0.22"
uuid = { version = "1", features = ["v4"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"
